--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dbsetup": "npx sequelize-cli db:create && npx sequelize-cli db:migrate",
-    "start": "node app.js"
+    "start": "node app.js",
+		"dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
