--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dbsetup": "npx sequelize-cli db:create && npx sequelize-cli db:migrate",
     "start": "node app.js",
-		"dev": "nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,14 +15,16 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "sequelize": "^6.32.1"
   },
-	  "devDependencies": {
+  "devDependencies": {
     "sequelize-cli": "^6.6.1"
   },
   "repository": {
