Adding Nodemon and Readme

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "password",
-    "database": "dans_multi_database",
+    "database": "postgres-development",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
