--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dbsetup": "npx sequelize-cli db:create && npx sequelize-cli db:migrate",
     "start": "node app.js",
-		"dev": "nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +22,8 @@
     "pg": "^8.11.3",
     "sequelize": "^6.32.1"
   },
-	  "devDependencies": {
+  "devDependencies": {
+    "nodemon": "^3.1.4",
     "sequelize-cli": "^6.6.1"
   },
   "repository": {
