--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "npmlog": "^7.0.1",
     "pg": "^8.11.3",
     "sequelize": "^6.32.1"
   },
